tests/suite/fail/generated/borrow/fail_move_store_text.ny
fn store(x: string) -> void { print(x) }
fn main() {
    let text = "hello"
    store(text)
    print(text) //~ ERROR was moved
}
